CHG: Small fix on media query, ADD: media query for better spacing in single project component

--- a/src/app/components/project/project.component.css
+++ b/src/app/components/project/project.component.css
@@ -218,6 +218,10 @@
 }
 
 @media (hover: none) {
+  .project-description {
+    margin-bottom: 30px;
+  }
+
   .prev:hover,
   .next:hover {
     background-color: rgba(0, 0, 0, 0.6);
